@@ -34,6 +34,7 @@ Hash password with password_hash
 Fix a typo on staticts rights
 Fix-encoding-issues
 handle single perso_id when adding absences
+Correct uses of App\Model\Agent in holiday recovery system
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
